crates/sniff-test/tests/snapshots/fixtures__executable_artifact.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "executable_artifact"
    },
    "findings": [],
    "format-version": 19,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
