crates/sniff-test/tests/snapshots/fixtures__feature_gated.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "feature_gated",
      "package-name": "feature-gated",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic` has no recorded `// PANIC:` evidence",
    "root": "feature_gated::feature_root",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:2:1: 2:32",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:3:5: 3:18",
    "target": "core::panicking::panic",
    "trace": [
      "src/lib.rs:3:5: 3:18: feature_gated::feature_root --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:3:5: 3:18: macro core::macros::builtin::assert --direct-call-> core::panicking::panic"
    ]
  }
]
