crates/sniff-test/tests/snapshots/fixtures__feature_gated_default.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "feature_gated",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "feature-gated",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "analysis-incomplete": 0,
      "indirect-call-boundaries": 0,
      "panic-obligations": 0,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
