crates/sniff-test/tests/snapshots/fixtures__generic_roots.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "compiler-assert-kind": "bounds-check",
    "kind": "compiler-assert",
    "level": "deny",
    "owner": {
      "crate": "generic_roots",
      "package-name": "generic-roots",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "compiler assertion (index out of bounds) has no recorded `// PANIC:` evidence",
    "root": "generic_roots::generic_index",
    "root-kind": "generic",
    "root-span": "src/lib.rs:1:1: 1:58",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:6: 2:19",
    "target": "compiler assert index out of bounds",
    "trace": [
      "src/lib.rs:2:6: 2:19: generic_roots::generic_index --assert-> compiler assert index out of bounds"
    ]
  }
]
