crates/sniff-test/tests/snapshots/fixtures__indirect_calls.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "indirect_calls::call_documented",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "call to `indirect_calls::Risky::documented` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "indirect_calls::call_documented",
    "root-kind": "generic",
    "root-span": "src/lib.rs:10:1: 10:56",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:11:5: 11:27",
    "target": "indirect_calls::Risky::documented",
    "trace": [
      "src/lib.rs:11:5: 11:27: indirect_calls::call_documented --indirect-call-> indirect_calls::Risky::documented"
    ],
    "trace-id": "c25d5d08"
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_documented",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved generic-dispatch call target (indirect_calls::Risky::documented)",
    "root": "indirect_calls::call_documented",
    "root-kind": "generic",
    "root-span": "src/lib.rs:10:1: 10:56",
    "span": "src/lib.rs:11:5: 11:27",
    "target": "indirect_calls::Risky::documented",
    "trace": [
      "src/lib.rs:11:5: 11:27: indirect_calls::call_documented --indirect-call-> indirect_calls::Risky::documented"
    ],
    "trace-id": "801700b0",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "generic-dispatch"
    }
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_dyn",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved dynamic-dispatch call target (indirect_calls::Risky::undocumented)",
    "root": "indirect_calls::call_dyn",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:18:1: 18:47",
    "span": "src/lib.rs:19:5: 19:29",
    "target": "indirect_calls::Risky::undocumented",
    "trace": [
      "src/lib.rs:19:5: 19:29: indirect_calls::call_dyn --indirect-call-> indirect_calls::Risky::undocumented"
    ],
    "trace-id": "33e750af",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "dynamic-dispatch"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_dyn",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved dynamic-dispatch call target (indirect_calls::Risky::undocumented)",
    "root": "indirect_calls::call_dyn",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:18:1: 18:47",
    "span": "src/lib.rs:19:5: 19:29",
    "target": "indirect_calls::Risky::undocumented",
    "trace": [
      "src/lib.rs:19:5: 19:29: indirect_calls::call_dyn --indirect-call-> indirect_calls::Risky::undocumented"
    ],
    "trace-id": "c950ac54",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "dynamic-dispatch"
    }
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "indirect_calls::call_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:22:1: 22:50",
    "span": "src/lib.rs:23:5: 23:17",
    "trace": [
      "src/lib.rs:23:5: 23:17: indirect_calls::call_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "ab5fca06",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "indirect_calls::call_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:22:1: 22:50",
    "span": "src/lib.rs:23:5: 23:17",
    "trace": [
      "src/lib.rs:23:5: 23:17: indirect_calls::call_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "c3cd71f9",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_undocumented",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved generic-dispatch call target (indirect_calls::Risky::undocumented)",
    "root": "indirect_calls::call_undocumented",
    "root-kind": "generic",
    "root-span": "src/lib.rs:14:1: 14:58",
    "span": "src/lib.rs:15:5: 15:29",
    "target": "indirect_calls::Risky::undocumented",
    "trace": [
      "src/lib.rs:15:5: 15:29: indirect_calls::call_undocumented --indirect-call-> indirect_calls::Risky::undocumented"
    ],
    "trace-id": "24ae6af4",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "generic-dispatch"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "indirect_calls::call_undocumented",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "indirect_calls",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved generic-dispatch call target (indirect_calls::Risky::undocumented)",
    "root": "indirect_calls::call_undocumented",
    "root-kind": "generic",
    "root-span": "src/lib.rs:14:1: 14:58",
    "span": "src/lib.rs:15:5: 15:29",
    "target": "indirect_calls::Risky::undocumented",
    "trace": [
      "src/lib.rs:15:5: 15:29: indirect_calls::call_undocumented --indirect-call-> indirect_calls::Risky::undocumented"
    ],
    "trace-id": "85732e54",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "generic-dispatch"
    }
  }
]
