crates/sniff-test/tests/snapshots/fixtures__macro_expansion_source_callsite.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "macro_expansion",
      "package-name": "macro-expansion",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic` has no recorded `// PANIC:` justification",
    "root": "macro_expansion::macro_internal_marker",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:24:1: 24:41",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:25:5: 25:34",
    "target": "core::panicking::panic",
    "trace": [
      "src/lib.rs:25:5: 25:34: macro_expansion::macro_internal_marker --macro-expansion-> macro macro_expansion::justified_const_assert",
      "src/lib.rs:20:9: 20:28: macro macro_expansion::justified_const_assert --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:20:9: 20:28: macro core::macros::builtin::assert --direct-call-> core::panicking::panic"
    ]
  },
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "macro_expansion",
      "package-name": "macro-expansion",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic` has no recorded `// PANIC:` justification",
    "root": "macro_expansion::macro_wrapped",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:13:1: 13:33",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:14:5: 14:25",
    "target": "core::panicking::panic",
    "trace": [
      "src/lib.rs:14:5: 14:25: macro_expansion::macro_wrapped --macro-expansion-> macro macro_expansion::static_assert",
      "src/lib.rs:9:9: 9:34: macro macro_expansion::static_assert --macro-expansion-> macro macro_expansion::const_assert",
      "src/lib.rs:3:9: 3:28: macro macro_expansion::const_assert --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:3:9: 3:28: macro core::macros::builtin::assert --direct-call-> core::panicking::panic"
    ]
  }
]
