crates/sniff-test/tests/snapshots/fixtures__macro_expansion_static_assert_ignored.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "macro_expansion"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::panicking::panic",
        "root": "macro_expansion::direct_assert",
        "root-kind": "concrete",
        "span": "src/lib.rs:27:5: 27:18",
        "target": "core::panicking::panic",
        "trace": [
          "src/lib.rs:27:5: 27:18: macro_expansion::direct_assert --macro-expansion-> macro core::std::assert",
          "src/lib.rs:27:5: 27:18: macro core::std::assert --direct-call-> core::panicking::panic"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::panicking::panic",
        "root": "macro_expansion::direct_macro",
        "root-kind": "concrete",
        "span": "src/lib.rs:23:5: 23:24",
        "target": "core::panicking::panic",
        "trace": [
          "src/lib.rs:23:5: 23:24: macro_expansion::direct_macro --macro-expansion-> macro macro_expansion::const_assert",
          "src/lib.rs:3:9: 3:28: macro macro_expansion::const_assert --macro-expansion-> macro core::std::assert",
          "src/lib.rs:3:9: 3:28: macro core::std::assert --direct-call-> core::panicking::panic"
        ]
      }
    ],
    "format-version": 10,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
