crates/sniff-test/tests/snapshots/fixtures__macro_marker_instances.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "safety",
    "finding": "documented-obligation",
    "function": "macro_marker_instances::direct_call_requires_justification",
    "kind": "effect",
    "level": "deny",
    "owner": {
      "crate": "macro_marker_instances",
      "scope": "workspace"
    },
    "reason": "call to `macro_marker_instances::perform` with a documented `# Safety` obligation has no recorded `// SAFETY:` justification",
    "root": "macro_marker_instances::direct_call_requires_justification",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:18:1: 18:44",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:19:14: 19:23",
    "target": "macro_marker_instances::perform",
    "trace": [
      "src/lib.rs:19:14: 19:23: macro_marker_instances::direct_call_requires_justification --direct-call-> macro_marker_instances::perform"
    ],
    "trace-id": "3dd4c23a"
  }
]
