crates/sniff-test/tests/snapshots/fixtures__marker_placement.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "marker_placement",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "marker-placement",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "analysis-incomplete": 0,
      "indirect-call-boundaries": 0,
      "panic-obligations": 0,
      "raw-panic-paths": 1,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "marker_placement::panic_comment_on_function_def_bad --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "kind": "compiler-assert",
            "level": "deny",
            "reason": "compiler assert",
            "span": "src/lib.rs:27:5: 27:24",
            "target": "compiler assert attempt to divide `total` (_1, argument 1) by zero",
            "trace": [
              "src/lib.rs:27:5: 27:24: marker_placement::panic_comment_on_function_def_bad --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "marker_placement::panic_comment_on_function_def_bad",
        "root-declaration": "src/lib.rs:26:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "safety": {
      "counts": {
        "missing-docs": 0,
        "missing-justification": 0,
        "missing-requirements": 1
      },
      "findings": [
        {
          "function": "marker_placement::safety_comment_on_function_def_bad",
          "kind": "missing-requirements",
          "level": "warn",
          "missing-requirements": [
            "valid_ptr: pointer must be non-null.",
            "initialized: pointer must reference initialized memory."
          ],
          "reason": "unsafe call to `marker_placement::read_byte` does not satisfy all # Safety requirements",
          "span": "src/lib.rs:58:14: 58:28",
          "target": "marker_placement::read_byte"
        }
      ]
    },
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
